--- a/my-product-next-project-1/package.json
+++ b/my-product-next-project-1/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "heroicons-react": "^1.4.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0"
