--- a/my-product-next-project-1/package.json
+++ b/my-product-next-project-1/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
+    "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "heroicons-react": "^1.4.1",
     "next": "13.4.12",
