--- a/my-product-next-project-1/package.json
+++ b/my-product-next-project-1/package.json
@@ -18,7 +18,8 @@
     "heroicons-react": "^1.4.1",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
