--- a/my-product-next-project-1/package.json
+++ b/my-product-next-project-1/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.10.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
