--- a/my-product-next-project-1/package.json
+++ b/my-product-next-project-1/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@iconify/icons-heroicons-solid": "^1.2.6",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
