--- a/my-product-next-project-1/package.json
+++ b/my-product-next-project-1/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coreui/coreui": "^5.0.0-alpha.1",
     "@coreui/react": "^5.0.0-alpha.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -21,7 +22,6 @@
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "antd": "^5.8.2",
-    "bootstrap": "^5.3.1",
     "cdbreact": "^1.5.18",
     "heroicons-react": "^1.4.1",
     "next": "13.4.12",
